<resources xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">
    <string name="app_name">PlainDict</string>
    <string name="wenj_fugai">File exists already, overwrite？</string>
    <string name="warn_delete">Are you sure to delete selected %d cards?(can\'t undo)</string>
    <string name="warnDelete">Are you sure to delete the dictionary configuration set %s?</string>
    <string name="warnDeleteMultiple">Are you sure to delete %d selected groups?</string>
    <string name="warn_move">Are you sure to move %1$d word collections from [ %2$s ] to [ %3$s ]?</string>
    <string name="warn_exit0">Are you sure to exit?</string>
    <string name="surerrecords">Are you sure to delete selected %d records?(won\'t effect file system)</string>
    <string name="applyallset">Apply to All Sets</string>
    <string name="pickdestineFolder">Select Destine Folder</string>
    <string name="warn_exit1">Clean History</string>
    <string name="bookmarkupdated">Bookmark updated as: %s</string>
    <string name="bookmarkup">Bookmark updated!</string>
    <string name="bookmarkjumped">Jumped to: %s</string>
    <string name="bookmarkfailed">Bookmark not found: %s</string>
    <string name="endr">End Reached</string>
    <string name="cbflowersnstr">Set <![CDATA[<%1$s>]]> of size %2$d returned %3$d item(s)</string>
    <string name="vbflowersnstr">%1$d word(s) in total , matched %2$d</string>
    <string name="BGMSG">Assigning Page Background of %s</string>
    <string name="BGMSG2">Global Page Background</string>
    <string name="PT1">Page Turn : On</string>
    <string name="PT2">Page Turn : Off</string>
    <string name="fc">Found %d item(s).</string>
    <string name="fn">Found nothing here.</string>
    <string name="maniDel">Canceled %1$d/%2$d item(s) collected!</string>
    <string name="maniFavor">%1$s (%2$d items)</string>
    <string name="maniFavor2">%1$s (%2$d records)</string>
    <string name="resCount">Search done!Found %s items</string>
    <string name="searchFailed">Search failed: %s</string>
    <string name="removed">Removed</string>
    <string name="toRemove">to be removed…</string>
    <string name="added">Added Successfully!</string>
	<string name="jumpfail">Link invalid!</string>
    <string name="favorRecon">default favorite db reconstructed!</string>
    <string name="fuzzyfill">Entry search done! Time %1$1.2fs, Found  %2$d items!</string>
    <string name="fullfill">Fulltext search done! Time %1$1.2fs, Found  %2$d items!</string>
    <string name="idxfill">索引已立完成！ 耗时 %1$1.2fs,共索引 %2$d 本词典,存储占用 %3$s (共 %4$s)！</string>
	<string name="regret">Regex Search</string>
    <string name="fullret">Fulltext search</string>
    <string name="fuzzyret">Entry Wildcard Match</string>
	<string name="fullret1">@string/fullret</string>
	<string name="fuzzyret1">@string/fuzzyret</string>
	<string name="fuzzyret2">词条搜索</string>
    <string name="warn_exit">Click again to exit!</string>
    <string name="relaunch">Relaunch The Application Required!</string>
    <string name="addd">Open Mdx Dictionary</string>
    <string name="nothingR">Nothing recorded</string>
    <string name="bookmarkH">Bookmark History</string>
    <string name="clearsucc">Done！</string>
    <string name="clearfail">Error occurred！</string>
    <string name="endendr">@string/endr</string>
    <string name="toptopr">@string/endr</string>
    <string name="err">Load Error! %1$s @%2$s : %3$s</string>
    <string name="loadconfig">Load Group</string>
    <string name="pickfavor">Pick Favorite Collection</string>
    <string name="newfc">Create</string>
    <string name="loadsucc">Load successfully！</string>
    <string name="loadsucc2">Loaded<![CDATA[<<]]> %1$s</string>
    <string name="savedone">%1$s <![CDATA[>>]]> saved</string>
    <string name="loadfail2">Load Error: missing \:\:  %1$s</string>
    <string name="renamefail0">Name Invalid</string>
    <string name="saveas_done">Save as done!</string>
    <string name="renamefail">File already exists,rename failed!</string>
    <string name="search">Search</string>
    <string name="perWSearch">Per-word search</string>
    <string name="perWSTag">per</string>
    <string name="peruseToggle">Peruse mode</string>
    <string name="peruseToggle1">@string/peruseToggle</string>
    <string name="currentPlan" >Current( %d )</string>
    <string name="allPlans">All sets</string>
    <string name="defPlan">Default set</string>
    <string name="pLoadDone">Set %1$s loaded! (%2$d/%3$d)</string>
    <string name="dupicateD">dupicated!</string>
    <string name="renD">rename done！</string>
    <string name="delD">delete done!</string>
    <string name="delDone">deleted</string>
    <string name="bmAdded">Bookmark added !</string>
	<string name="AppOpt">Application Tweaks</string>
    <string name="dictOpt">Dictionary options…</string>
    <string name="dictOpt1">@string/dictOpt</string>
    <string name="setOpt">Dictionary Set options…</string>
    <string name="newName">new name…</string>
    <string name="bm">BookMarks</string>
    <string name="bmSub">Delete BookMark</string>
    <string name="AAllow">Do you allow this app to create folders in /SDCARD/PLOD (Recommended)？</string>
    <string name="applyall">Apply to All Sets</string>
    <string name="GL">Global</string>
    <string name="tools">Tools</string>
	<string name="empty__" />
	<string name="stg_require">Please grant storage permission.</string>
	<string name="stg_statement">This app cannot work without storage permission.</string>
	<string name="stg_grantnow">Grant now</string>
	<string name="trialin">Trial…… #</string>
	<string name="stgerr_fail">Sorry, but cannot use this app on you device.</string>
	<string name="infoStr">无限词典（PlainDict，原名平典）可打开mdx、dsl、pdf格式的词典书籍文件，支持联合搜索与全文搜索，允许自定义在线词典。\n\n当前版本号：v%s \n\n[\[ 开源资料 \]](kaiyuan)\ \n\n[\[ 更新日志，公告 \]](rizhi) \n\n[\[ 谈谈不足 \]](taolun)</string>
	<string name="licence">Open Source Licences</string>
	<string name="bmAdd">Add Bookmark</string>
	<string name="language">Language</string>
	<string name="peruse_mode">Peruse Mode</string>
	<string name="prog_settings">Program Settings</string>
	<string name="clipboard">Enable clipboard monitor</string>
	<string name="keep_screen_on">Keep screen on</string>
	<string name="classical_sort">Classical case-insensitivity sorting method</string>
	<string name="wv_font">Global webview font scale : \ </string>
	<string name="wv_background">Global web view background:</string>
	<string name="m_background">Main application background:</string>
	<string name="f_background">Float search background:</string>
	<string name="paste_target">Paste target:</string>
	<string name="share_target">Share target:</string>
	<string name="p_paste_target">Paste to peruse mode when app has focus</string>
	<string name="dev">Developer options</string>
	<string name="lastmarks">Lastest Bookmark</string>
	<string name="pick_main">Pick Main Folder</string>
	<string name="manager">Dictionary Manager</string>
	<string name="switch_favor">Switch Favorite</string>
	<string name="multi_select">Multi-select</string>
	<string name="move_top">Move to top</string>
	<string name="move_bottom">Move to bottom</string>
	<string name="set_filter">Set as filter</string>
	<string name="duplicate">Duplicate</string>
	<string name="to_main_auto">Main auto</string>
	<string name="to_main_main">Main search bar</string>
	<string name="to_main_peruse">Main peruse mode</string>
	<string name="to_float">Float search</string>
	<string name="update_bookmark">Update bookmark</string>
	<string name="bookmarkL">BookMark List…</string>
	<string name="f_scale_up">Font size++</string>
	<string name="f_scale_down">Font size - -</string>
	<string name="background_color">Background Color :</string>
	<string name="text_zoom">Text Zoom :</string>
	<string name="case_insensitive_policy">Case Insensitive Policy :</string>
	<string name="remove_mode">Remove Mode</string>
	<string name="jump">Jump</string>
	<string name="strict_mode">Strict Mode</string>
	<string name="loose_mode">Loose Mode</string>
	<string name="browse_all_favorite_set">Browse All Decks</string>
	<string name="refresh_current_favorite_set">Refresh Current Deck</string>
	<string name="hint_mode">Hint search mode</string>
	<string name="tint_result">Tint search result</string>
	<string name="switch_dict">Switch dictionary</string>
	<string name="switch_set">Switch set</string>
	<string name="unfold_all">Unfold all</string>
	<string name="rem_position">Remember page position</string>
	<string name="direct_update">Update Directly</string>
	<string name="bring_from_background">Awaken from background</string>
	<string name="canceld_peruse_mode">Canceled peruse mode</string>
	<string name="show_all_dictionaries">Show all dictionaries</string>
	<string name="show_bookmark_add_button">Show bookmark add btn</string>
	<string name="show_bookmark_delete_button">Show bookmark delete btn</string>
	<string name="auto_search_on_switch">Auto search on switch</string>
	<string name="show_fast_scroller">Show fast scroller</string>
	<string name="reset_keyword">Reset keyword</string>
	<string name="save_bookmark">Save bookmark</string>
	<string name="hint_search_result">Hint search result</string>
	<string name="fold_all">Fold all</string>
	<string name="fold_exp_all">Expand / Fold all</string>
	<string name="Commit">commit</string>
	<string name="reset">Reset</string>
	<string name="save_as">Save as</string>
	<string name="disable_all">Disable all</string>
	<string name="enable_all">Enable all</string>
	<string name="select_all_invalid">Select All invalid</string>
	<string name="add_selection_to_set">Add selection to set</string>
	<string name="remove_selection_from_set">Remove selection from set</string>
	<string name="remove_records">Remove from record</string>
	<string name="move_files">Move files to</string>
	<string name="new___">New…</string>
	<string name="dict_specs">&#160;&#160;&#160;Global_ Speicify_ Java API_Classical_ ×_ √</string>
	<string name="no_suitable_app">Found no suitable App.</string>
	<string name="multiple_vals">*多重*</string>
	<string name="dv_select">@string/fp_select</string>
	<string name="search_end">%1$s 一查到底 %2$s</string>
	<string name="view_spec">视图设置</string>
	<string name="package_name">程序包名</string>
	<string name="activity_name">活动名称</string>
	<string name="action_name">举措名称</string>
	<string name="mime_type">MIME类型</string>
	<string name="extra_key_name">字段%d键名</string>
	<string name="extra_key_value">字段%d键值</string>
	<string name="backkey_web_goback">使用返回键倒退网页</string>
	<string name="saved">已保存！</string>
	<string name="saved_with_size">已保存！大小 = %d </string>
	<string name="webscroll_apply_all">应用到全部</string>
	<string name="warn_copyconfrom">确认要从 %s 拷贝配置吗？</string>
	<string name="linkedft"><![CDATA[已关联 %s >>  %s]]></string>
	<string name="copyedft"><![CDATA[已复制到 %s <<  %s]]></string>
	<string name="warn_reconf">确认要恢复默认配置吗？</string>
	<string name="SoundOpt">语音设定等</string>
	<string name="page_options">页面工具</string>
	<string name="text_operation">文本操作</string>
	<string name="shutdown_vm">Shutdown VM</string>
	<string name="fapp_name">Float Search</string>
	<string name="server_spec">词典服务器</string>
	<string name="colordict">colordict.intent.action.SEARCH</string>
	<string name="mdccsp">Versatile Share Panel</string>
	<string name="page_yuan">查看原网页</string>
	<string name="page_del">删除重载页面</string>
	<string name="page_ucc">打开文本分享</string>
	<string name="page_rukou">添加为入口</string>
	<string name="page_nav">输入网址…</string>
	<string name="page_fuzhi">复制文本</string>
	<string name="page_sel">选择文本</string>
	<string name="page_baocun">保存代码</string>
	<string name="page_dakai">使用浏览器打开</string>
	<string name="page_lianjie">复制链接</string>
	<string name="page_source">查看源代码</string>
	<string name="dict_opt">词典设置</string>
	<string name="favor_sel">收藏选中文本</string>
	<string name="hi_color">选择标注颜色</string>
	<string name="highlight">高亮</string>
	<string name="inter_sel">间选 | 间不选</string>
</resources>