<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/toolbar_action1"
		android:title="@string/search"
		android:icon="@drawable/ic_btn_multimode"
		app:showAsAction="never"/>

	<item
		android:id="@+id/toolbar_action7"
		android:icon="@drawable/downward"
		android:title="@string/show_all_dictionaries"
		app:showAsAction="never"/>

	<item
		android:id="@+id/toolbar_action3"
		android:icon="@drawable/downward"
		android:title="设置翻阅"
		app:showAsAction="never"/>

	<item
		android:id="@+id/toolbar_action2"
		android:icon="@drawable/downward"
		android:title="页内搜索"
		app:showAsAction="never"/>

	<item
		android:id="@+id/toolbar_action6"
		android:icon="@drawable/downward"
		android:title="@string/reset_keyword"
		app:showAsAction="never"/>
</menu>
