<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="AppCompatResource"
	>
<!--0--><item android:title="Action" android:id="@+id/toolbar_action1" android:icon="@drawable/ic_btn_siglemode" app:showAsAction="always"/>

<!--1--><item android:title="@string/fold_all" android:id="@+id/toolbar_action0" android:visible="false" app:showAsAction="never"/>

<!--2--><item android:title="@string/switch_set" android:id="@+id/toolbar_action3" android:icon="@drawable/book_list" app:showAsAction="never"/>

<!--3--><item android:title="@string/switch_dict" android:id="@+id/toolbar_action2" app:showAsAction="never"/>

<!--4--><item android:title="页内查找" android:id="@+id/toolbar_action5" android:checkable="true" android:icon="@drawable/book_list" app:showAsAction="never"/>

<!--5--><item android:title="即点即译" android:id="@+id/remPagePos" android:checkable="true" android:icon="@drawable/book_list" app:showAsAction="never"/>

<!--6--><item android:title="@string/favorite" android:id="@+id/toolbar_action4" android:icon="@drawable/star_ic" app:showAsAction="never"/>

<!--7--><item android:title="翻阅模式" android:id="@+id/peruseList" android:icon="@drawable/ic_peruse" app:showAsAction="never"/>
 </menu>
