<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<PreferenceCategory android:key="cat_prog" android:title="内容页"  >
		<com.knziha.filepicker.settings.IntPreference
			android:defaultValue="@integer/MIN"
			android:key="f_size"
			android:persistent="true"
			android:title="@string/wv_font"
			suffix=" %"
			app:inlineSummary="true"
			/>
		<com.jaredrummler.colorpicker.ColorPickerPreference
			android:key="GPBC"
			android:title="@string/wv_background"
			android:summary="Page background"
			android:defaultValue="@integer/COLOR_GREEN"
			/>
	</PreferenceCategory>


	<PreferenceCategory android:key="cat_prog" android:title="光彩" >
		<com.jaredrummler.colorpicker.ColorPickerPreference
			android:key="BCM"
			android:title="@string/m_background"
			android:defaultValue="@integer/COLOR_PRI"
			/>
		<com.jaredrummler.colorpicker.ColorPickerPreference
			android:key="BCF"
			android:title="@string/f_background"
			android:defaultValue="@integer/COLOR_PRI"
			/>
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:persistent="false"
			android:defaultValue="false"
			android:key="keep_screen"
			android:title="@string/keep_screen_on" />
	</PreferenceCategory>


	<PreferenceCategory android:key="exit" android:title="启动与退出" >
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="stsch"
			android:persistent="false"
			android:defaultValue="false"
			android:title="启动时恢复上次的搜索词"
			/>
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="noext"
			android:persistent="false"
			android:defaultValue="false"
			android:title="返回键退入后台，而不是退出程序"
			/>
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="back_web"
			android:persistent="false"
			android:defaultValue="true"
			android:title="返回键优先倒退网页"
			android:summary="建议长按解释页面的&lt;&gt;按钮进行设置"
			/>
		<androidx.preference.ListPreference
			android:defaultValue="0"
			android:key="conext"
			android:persistent="false"
			android:title="退出确认方式："
			android:entryValues="@array/conext"
			android:entries="@array/conext_info"
			app:inlineSummary="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory android:key="cat_prog" android:title="词典接口" >
		<androidx.preference.ListPreference
			android:defaultValue="0"
			android:key="tgt_paste"
			android:persistent="true"
			android:title="@string/paste_target"
			android:entryValues="@array/zero_three"
			android:entries="@array/paste_target_info"
			/>

		<androidx.preference.ListPreference
			android:defaultValue="0"
			android:key="tgt_share"
			android:persistent="true"
			android:title="@string/share_target"
			android:entryValues="@array/zero_three"
			android:entries="@array/paste_target_info"
			/>

		<androidx.preference.ListPreference
			android:defaultValue="3"
			android:key="tgt_color"
			android:persistent="true"
			android:title="ColorDict 划词目标 : "
			android:summary="（流行的词典接口）"
			android:entryValues="@array/zero_three"
			android:entries="@array/paste_target_info"
			app:wiki="ColorDict 本是一款APP，其接口被争相模仿而流行。静读天下支持的第一个查词方式即为此。"
			/>

		<androidx.preference.ListPreference
			android:defaultValue="3"
			android:key="tgt_text"
			android:persistent="true"
			android:title="文本处理目标 : "
			android:summary="（安卓通用接口）"
			android:entryValues="@array/zero_three"
			android:entries="@array/paste_target_info"
			app:wiki="安卓通用的文本处理接口，一般位于文本的上下文菜单中，比如长按浏览器文本出现的菜单。谷歌翻译也实现了此接口。"
			/>
	</PreferenceCategory>

	<PreferenceCategory android:key="cat_prog" android:title="文件夹设置" >
		<com.knziha.filepicker.settings.FilePickerPreference
			android:defaultValue="@null"
			android:key="fntlb"
			android:persistent="true"
			android:title="音标字体路径"
			app:selection_type="dir_select"
			app:selection_mode="single_mode"
			/>
	</PreferenceCategory>

	<PreferenceCategory android:key="cat_prog" android:title="浮动搜索" >
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:persistent="false"
			android:defaultValue="true"
			android:key="f_move_bg"
			android:title="退入后台而不直接退出"
			/>
		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:persistent="false"
			android:defaultValue="true"
			android:key="f_hide_recent"
			android:title="从最近任务中隐藏"
			/>
	</PreferenceCategory>

	<com.knziha.filepicker.settings.TwinkleSwitchPreference
		android:persistent="false"
		android:defaultValue="false"
		android:key="search_all"
		android:title="搜索所有词典"
		app:isPreferenceVisible="false"
		/>


	<!--		<com.knziha.filepicker.settings.TwinkleSwitchPreference-->
	<!--			android:persistent="false"-->
	<!--			android:defaultValue="true"-->
	<!--			android:key="f_share_peruse"-->
	<!--			android:title="程序在前台时，分享到翻阅模式"-->


	<PreferenceCategory android:key="cat_prog" android:title="其他设置" >
		<Preference
			android:key="sspec"
			android:persistent="false"
			android:title="搜索设置"
			app:isPreferenceVisible="true"
			android:icon="@drawable/ic_search"
			/>
		<Preference
			android:key="multi"
			android:persistent="false"
			android:title="多页面设置"
			android:icon="@drawable/ic_viewpager_carousel_vertical"
			android:tint="#000"
			android:clickable="true"
			/>
		<Preference
			android:key="vspec"
			android:persistent="false"
			android:title="视图杂项"
			android:icon="@drawable/ic_view_carousel_black_24dp"
			/>

		<Preference
			android:key="dev"
			android:persistent="false"
			android:title="兼容性选项"
			app:isPreferenceVisible="true"
			android:icon="@drawable/tools_toolbar"
			/>
	</PreferenceCategory>


	<androidx.preference.ListPreference
		android:key="backup"
		android:entries="@array/backup"
		android:persistent="false"
		android:title="备份设置"
		app:wiki="需要存储卡的读写权限。备份至/sdcard/平典搜索_备份.json，不包括词典配置；恢复后需完全重启APP方可生效。"
		/>

	<PreferenceCategory android:key="cat_prog" android:title="" >
	</PreferenceCategory>

</PreferenceScreen>
