<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:NumberPickerPreference="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	>
	<PreferenceCategory
		android:key="category_program"
		>
		<Preference
			android:key="app_settings"
			android:title="App设置"
			android:persistent="false"
			/>
		<Preference
			android:key="system_dev"
			android:title="系统开发者选项"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="root"
			android:title="开启Root"
			android:persistent="false"
			/>

		<androidx.preference.ListPreference
			android:defaultValue="@string/empty__"
			android:key="locale"
			android:persistent="true"
			android:title="@string/language"
			android:entryValues="@array/languages"
			android:entries="@array/languages_info"
			/>


		<Preference
			android:key="battery"
			android:title="申请电池优化白名单"
			android:summary="避免处于后台时自动退出"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="notify"
			android:title="常驻通知栏"
			android:summary="允许后台运行/点击后查询复制的词"
			android:persistent="false"
			app:allowDividerBelow="true"
			app:hasSep="true"
			/>


		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:persistent="false"
			android:defaultValue="false"
			android:key="classical_sort"
			android:title="@string/classical_sort"
			app:allowDividerAbove="true"
			app:allowDividerBelow="true"/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="lazyLoad"
			android:title="词典懒加载"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="keep_hide"
			android:title="管理词典时保留禁用项"
			android:persistent="false"
			/>

		<com.knziha.plod.settings.WarnPreference
			android:key="clear_cache1"
			android:title="清理网页缓存（仅内存）"
			android:persistent="false"
			/>

		<com.knziha.plod.settings.WarnPreference
			android:key="clear_cache2"
			android:title="清理网页缓存（所有文件）"
			android:persistent="false"
			/>

		<com.knziha.plod.settings.WarnPreference
			android:key="clear_cache3"
			android:title="清理表单数据"
			android:persistent="false"
			/>

		<com.knziha.plod.settings.WarnPreference
			android:key="clear_cache4"
			android:title="清理SSL处理记录"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="enable_web_debug"
			android:title="允许网页调试"
			android:persistent="false"
			/>


		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="tts_reader"
			android:title="音频库找不到时使用 TTS"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="cache_mp3"
			android:title="预先缓存Mdd音频到文件"
			android:persistent="false"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="sounds_first"
			android:title="点击按钮发音时，优先使用发音库而非发音链接"
			android:persistent="false"
			/>

		<Preference
			android:key="log"
			android:persistent="false"
			android:title="查看上次错误信息"
			app:isPreferenceVisible="true"
			app:allowDividerAbove="true"
			/>

		<Preference
			android:key="log2"
			android:persistent="false"
			android:title="模拟错误信息"
			app:isPreferenceVisible="true"
			app:allowDividerBelow="true"
			/>

		<com.knziha.filepicker.settings.TwinkleSwitchPreference
			android:key="dbv2"
			android:persistent="false"
			android:title="使用数据库V2"
			app:isPreferenceVisible="true"
			app:allowDividerAbove="true"
			/>

		<Preference
			android:key="dbv2_up"
			android:persistent="false"
			android:title="升级数据库V2"
			app:isPreferenceVisible="true"
			/>
	</PreferenceCategory>


</PreferenceScreen>